[gd_scene load_steps=13 format=2]

[ext_resource path="res://Textures/My Textures/menu.png" type="Texture" id=1]
[ext_resource path="res://Textures/My Textures/restart.png" type="Texture" id=2]
[ext_resource path="res://Textures/Seamless Cave In Parts/background.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Otros/Fin.gd" type="Script" id=4]
[ext_resource path="res://Textures/Pixel Font/pixel font.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Textures/My Textures/black.png" type="Texture" id=6]
[ext_resource path="res://Escenas/Otros/Guardar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Textures/16 button clicks/independent_nu_ljudbank-buttons_and_clicks/buttons_and_clicks/modified/Clic03.mp3.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
resource_name = "end"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "start"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 194.658, 71.5005 )
scale = Vector2( 2.3682, 2.3682 )
texture = ExtResource( 3 )

[node name="Restart" type="TouchScreenButton" parent="."]
position = Vector2( 72, 72 )
scale = Vector2( 2.86181, 2.86181 )
normal = ExtResource( 2 )
shape = SubResource( 1 )

[node name="Menu" type="TouchScreenButton" parent="."]
position = Vector2( 136, 72 )
scale = Vector2( 3, 3 )
normal = ExtResource( 1 )
shape = SubResource( 1 )

[node name="score" type="Label" parent="."]
margin_left = 64.0
margin_right = 128.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bestscore" type="Label" parent="."]
modulate = Color( 0.85098, 1, 0, 1 )
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/end = SubResource( 3 )
anims/start = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 132, 68 )
scale = Vector2( 5.125, 3.125 )
texture = ExtResource( 6 )

[node name="Guardar" parent="." instance=ExtResource( 7 )]

[node name="sfx" type="Node2D" parent="."]

[node name="one" type="AudioStreamPlayer2D" parent="sfx"]
stream = ExtResource( 8 )
volume_db = -10.0
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
